[package]
edition = "2024"
name = "hk-save-logger"
version = "0.1.0"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive"] }
diff = "0.1.13"
directories = "6.0.0"
ecb = { version = "0.1.2", features = ["std"] }
nano-leb128 = "0.1.0"
owo-colors = "4.2.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
similar = "2.7.0"
time = { version = "0.3.43", features = ["local-offset", "macros", "parsing"] }
